# deflake

./: README.md  config.yaml  generate_test_data.py  main.py  pyproject.toml  requirements.txt
analysis/: report.html  results.json
data/: sample_test_data.csv
deflake_reports/: pytest_run_01.json  pytest_run_02.json  pytest_run_03.json  pytest_run_04.json  pytest_run_05.json  pytest_run_06.json  pytest_run_07.json  pytest_run_08.json  pytest_run_09.json  pytest_run_10.json
src/: config.py  data_ingestion.py  flakiness_detector.py  visualizer.py
