[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deflake"
version = "0.1.0"
description = "Statistical flaky test detection using EWMA, Z-score, and machine learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.7.2",
    "plotly>=6.4.0",
    "PyYAML>=6.0.1",
    "click>=8.0.0",
]
authors = [
    {name = "Ivan Klymchuk", email = "klymhuk.ivan@gmail.com"},
]

[project.urls]
Homepage = "https://github.com/iklymchuk/deflake"
Repository = "https://github.com/iklymchuk/deflake"
Issues = "https://github.com/iklymchuk/deflake/issues"
Documentation = "https://github.com/iklymchuk/deflake#readme"

[project.scripts]
deflake = "deflake.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["deflake*"]

[tool.setuptools.package-dir]
"" = "src"